--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,43 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  background-color: #2b2b2b; 
+  margin: 0;                 
+  font-family: 'Inter', sans-serif; 
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.exercise-select {
+  background-color: #b98080; 
+  color: #333;
+  border-radius: 0.4rem;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.custom-select2 {
+  background-color: #8bfdb1; 
+  color: #333;
+  border-radius: 0.4rem;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.custom-select {
+  background-color: #9ed6e7; 
+  color: #333;
+  border-radius: 0.4rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.header-glow {
+  color: white; 
+  -webkit-text-stroke: 0.5px black; 
+  -webkit-text-fill-color: white; 
+  font-weight: bold;  font-size: 2rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+}
+
+.header-glow2 {
+  color: white; 
+  -webkit-text-stroke: 2px black; 
+  -webkit-text-fill-color: white; 
+  font-weight: bold;
+  font-size: 12rem;
+  text-shadow: 1.5rem 1rem 1rem rgba(0, 0, 0, 0.7);
+  color: #ffffff;
 }
